llm-d/instances/gateway/gateway.yaml
# Update hostname and REPLACE_WITH_CLUSTER_APPS_DOMAIN before applying.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    istio.io/rev: openshift-gateway
  name: openshift-ai-inference
  namespace: openshift-ingress
spec:
  gatewayClassName: openshift-ai-inference
  listeners:
    - allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - user1
                  - demo-llm
      hostname: inference-gateway.REPLACE_WITH_CLUSTER_APPS_DOMAIN
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ''
            kind: Secret
            name: openshift-ai-inference-tls
        mode: Terminate
